<resources>
    <string name="app_name">CofC Health App</string>
    <string name="greeting">Hi Zac, \nWelcome Back</string>
    <string name="service_title">Student Health Service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_q1">How was your overall mood today?</string>
    <string name="post_q2">How was your anxiety or stress today?</string>
    <string name="post_q3">How was your sleep last night?</string>
    <string name="post_q4">How much physical activity did you engage in?</string>
    <string name="post_q5">How much did you express your feelings today?</string>
    <string name="post_q6">How relaxed were you today?</string>
    <string name="post_button">Post</string>
    <string name="search">Search</string>
    <string name="student_health_services">Student Health Services</string>
    <string name="home_title_1_hours">Hours: 8:30am-5pm</string>
    <string name="open_button">Open</string>
    <string name="profile_greeting">Zac Palmer</string>
    <string name="call_button"> Call </string>
    <string name="suicide_hotline">Suicide Hotline</string>
    <string name="hours_24_7">Hours: 24/7</string>
    <string name="student_affairs">Student Affairs</string>
    <string name="hours_8_30am_5pm">Hours: 8:30am-5pm</string>
    <string name="career_center">Career Center</string>
    <string name="post">Post</string>
    <string name="financial_aid_office">Financial Aid Office</string>
    <string name="library">Library</string>
    <string name="wellness_guides">Wellness Guides</string>
    <string name="mental_stability">Mental Stability</string>
    <string name="open">Open</string>
    <string name="time_management">Time Management</string>
    <string name="breathing_exercises">Breathing Exercises</string>
    <string name="daily_activities">Daily Activities</string>
    <string name="bad">bad</string>
    <string name="okay">okay</string>
    <string name="good">good</string>
    <string name="great">great</string>
    <string name="student_affairs_photo">Student Affairs Photo</string>
    <string name="suicide_hotline_photo">Suicide Hotline Photo</string>
    <string name="student_health_photo">Student Health Photo</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="career_center_photo">Career Center Photo</string>
    <string name="no">no</string>
    <string name="permission_request_msg">permission request</string>
    <string name="permission_request_title">permission request</string>
    <string name="yes">yes</string>
    <string name="permission_denied_title">permission denied</string>
    <string name="permission_denied_msg">permission denied</string>
    <string name="ok">ok</string>
    <string name="managing_stress">Managing Stress</string>
    <string name="healthy_study_habits">Healthy Study Habits</string>
    <string name="none">none</string>
    <string name="some">some</string>
    <string name="enough">enough</string>
    <string name="a_lot">a lot</string>
    <string name="not">not</string>
    <string name="a_little">a little</string>
    <string name="decent">decent</string>
    <string name="very">very</string>
    <string name="friendship_guides">Friendship Guides</string>
</resources>