<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Post">

    <View
        android:id="@+id/sun"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="40dp"
        android:layout_marginStart="150dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textSize="@dimen/l_size"
        android:layout_marginTop="35dp"
        android:layout_marginStart="30dp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="620dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="27dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_q1"
                android:textColor="@color/dark"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />
            <RadioGroup
                android:id="@+id/question_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp">

                <RadioButton
                    android:id="@+id/q11"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/bad"/>
                <RadioButton
                    android:id="@+id/q12"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/okay"/>
                <RadioButton
                    android:id="@+id/q13"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/good"/>
                <RadioButton
                    android:id="@+id/q14"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/great"/>

            </RadioGroup>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_q2"
                android:textColor="@color/dark"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="110dp"
                android:textStyle="bold"
                />
            <RadioGroup
                android:id="@+id/question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="130dp"
                android:layout_marginStart="20dp">

                <RadioButton
                    android:id="@+id/q21"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/bad"/>
                <RadioButton
                    android:id="@+id/q22"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/okay"/>
                <RadioButton
                    android:id="@+id/q23"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/good"/>
                <RadioButton
                    android:id="@+id/q24"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/great"/>

            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_q3"
                android:textColor="@color/dark"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="200dp"
                android:textStyle="bold"
                />

            <RadioGroup
                android:id="@+id/question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="220dp"
                android:layout_marginStart="20dp">

                <RadioButton
                    android:id="@+id/q31"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/bad"/>
                <RadioButton
                    android:id="@+id/q32"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/okay"/>
                <RadioButton
                    android:id="@+id/q33"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/good"/>
                <RadioButton
                    android:id="@+id/q34"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/great"/>

            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_q4"
                android:textColor="@color/dark"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="290dp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/question_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="310dp"
                android:layout_marginStart="20dp">

                <RadioButton
                    android:id="@+id/q41"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/none"/>
                <RadioButton
                    android:id="@+id/q42"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/some"/>
                <RadioButton
                    android:id="@+id/q43"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/enough"/>
                <RadioButton
                    android:id="@+id/q44"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/a_lot"/>

            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_q5"
                android:textColor="@color/dark"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="380dp"
                android:textStyle="bold"
                />

            <RadioGroup
                android:id="@+id/question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="400dp"
                android:layout_marginStart="20dp">

                <RadioButton
                    android:id="@+id/q51"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/none"/>
                <RadioButton
                    android:id="@+id/q52"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/some"/>
                <RadioButton
                    android:id="@+id/q53"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/enough"/>
                <RadioButton
                    android:id="@+id/q54"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/a_lot"/>

            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_q6"
                android:textColor="@color/dark"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="460dp"
                android:textStyle="bold"
                />
            <RadioGroup
                android:id="@+id/question_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="480dp"
                android:layout_marginStart="20dp">

                <RadioButton
                    android:id="@+id/q61"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/not"/>
                <RadioButton
                    android:id="@+id/q62"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/a_little"/>
                <RadioButton
                    android:id="@+id/q63"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/decent"/>
                <RadioButton
                    android:id="@+id/q64"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/very"/>

            </RadioGroup>
            <Button
                android:id="@+id/post_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/post_button"
                android:layout_marginTop="560dp"
                android:layout_marginStart="127dp"
                android:backgroundTint="@color/pop"
                app:cornerRadius="20dp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>